--- a/Hw1_Skip_Gram_Model.ipynb
+++ b/Hw1_Skip_Gram_Model.ipynb
@@ -236,11 +236,11 @@
       ],
       "metadata": {
         "id": "tb2POyY3Xa4_",
-        "outputId": "1730b17f-9db3-467d-f184-34e72aae90b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 765
-        }
+        },
+        "outputId": "1730b17f-9db3-467d-f184-34e72aae90b0"
       },
       "execution_count": 5,
       "outputs": [
@@ -320,11 +320,13 @@
         "  vocab_indices = list(word_to_index.values())\n",
         "  # remove context and target tokens.\n",
         "  ####! add your code here\n",
+        "  filtered_indices = [idx for idx in vocab_indices if idx != target_index and idx != context_index]\n",
+        "\n",
         "\n",
         "  ####\n",
         "  # randomly choose negative words.\n",
         "  ####! add your code here\n",
-        "  neg_samples =\n",
+        "  neg_samples = random.sample(filtered_indices, num_neg_samples)\n",
         "  ####\n",
         "\n",
         "  return neg_samples\n",
@@ -337,10 +339,24 @@
         "  print(index_to_word[sample])"
       ],
       "metadata": {
-        "id": "w32PlyxkX5Dp"
+        "id": "w32PlyxkX5Dp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ea6ab1c-84a1-45e4-d0a1-497cbcad9003"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Negative Words:\n",
+            "UCSD\n",
+            "UCSF\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,19 +379,19 @@
         "  h_context = W1[context_word_index]\n",
         "  # obtain negative sample vector\n",
         "  ####! Add your code here\n",
-        "  h_neg =\n",
+        "  h_neg = W2[neg_samples]\n",
         "  ####\n",
         "\n",
         "  # ompute positive prediction and loss.\n",
         "  u_target = np.dot(h_context, W2[target_word_index])\n",
         "  ####! Add your code here\n",
-        "  pos_loss =\n",
+        "  pos_loss = -np.log(sigmoid(u_target))\n",
         "  ####\n",
         "\n",
         "  # compute negative prediction and loss.\n",
         "  ####! Add your code here\n",
-        "  u_neg_samples =\n",
-        "  neg_loss =\n",
+        "  u_neg_samples = np.dot(h_neg, h_context)\n",
+        "  neg_loss = -np.sum(np.log(sigmoid(-u_neg_samples)))\n",
         "  ####\n",
         "\n",
         "  # total loss\n",
@@ -385,7 +401,7 @@
       "metadata": {
         "id": "QuEeAPYJaJwH"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -430,24 +446,24 @@
         "  grad_pos = sigmoid(u_target) - 1\n",
         "  W2[target_word_index] -= learning_rate * grad_pos * W1[context_word_index]\n",
         "  ####! Add your code here\n",
-        "  W1[context_word_index] -=\n",
+        "  W1[context_word_index] -= learning_rate * grad_pos * W2[target_word_index]\n",
         "  ####\n",
         "\n",
         "  # negative gradient.\n",
         "  ####! Add your code here\n",
-        "  grad_neg =\n",
+        "  grad_neg = sigmoid(u_neg_samples)\n",
         "  ####\n",
         "\n",
         "  for i, neg_index in enumerate(neg_samples_idx):\n",
         "      ####! Add your code here\n",
-        "      W2[target_word_index] -=\n",
-        "      W1[neg_index] -=\n",
+        "      W2[target_word_index] -= learning_rate * grad_neg[i] * W1[context_word_index]\n",
+        "      W1[neg_index] -= learning_rate * grad_neg[i] * W2[neg_index]\n",
         "      ####"
       ],
       "metadata": {
         "id": "ZQ8Puy74aO1J"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
