--- a/3_2_Decoder_Inference_Student_Copy.ipynb
+++ b/3_2_Decoder_Inference_Student_Copy.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "3sh-1L0VFsbV"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "GNq_aQFVVeoi"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -139,10 +139,25 @@
         "print(contextual_embedding_matrix)"
       ],
       "metadata": {
-        "id": "UClxWvctOScO"
+        "id": "UClxWvctOScO",
+        "outputId": "10f658d7-717a-4d24-d5cd-e72aa2051722",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 1: Contextual Embedding Matrix for the two words ====\n",
+            "[[ 0.82418808  0.479966    1.17346801  0.90904807]\n",
+            " [-0.57172145 -0.10949727  0.01902826 -0.94376106]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,7 +207,7 @@
       "metadata": {
         "id": "ZkzZT32RRzTb"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -203,10 +218,25 @@
         "print(ffn_output)"
       ],
       "metadata": {
-        "id": "fXLLG2gUR0G_"
+        "id": "fXLLG2gUR0G_",
+        "outputId": "4d499523-205f-4356-f936-71c76399b16e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 2: Feed Forward Output ====\n",
+            "[[ 0.01684952  2.94827287 -1.14009063  3.90451764]\n",
+            " [ 0.76935938  0.92758784 -2.22796289  2.61359385]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -239,17 +269,33 @@
         "\n",
         "\n",
         "###<-- add your code here\n",
-        "residual_added =\n",
+        "residual_added = ffn_output + contextual_embedding_matrix\n",
         "###\n",
         "\n",
         "print(\"\")\n",
         "print(\"\\n==== Step 3a: Residual Added: ====\\n\", residual_added)"
       ],
       "metadata": {
-        "id": "Fue_pXm2TUXU"
+        "id": "Fue_pXm2TUXU",
+        "outputId": "767e3d7e-d83e-4f98-ad2c-8952eaece621",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "==== Step 3a: Residual Added: ====\n",
+            " [[ 0.8410376   3.42823888  0.03337738  4.81356571]\n",
+            " [ 0.19763793  0.81809057 -2.20893463  1.66983278]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -312,7 +358,7 @@
         "    mean = np.mean(x, axis=1, keepdims=True)\n",
         "\n",
         "    ###<-- add your code here\n",
-        "    variance =\n",
+        "    variance = np.var(x,axis=1, keepdims=True)\n",
         "    ###\n",
         "\n",
         "    return (x - mean) / np.sqrt(variance + epsilon)\n",
@@ -321,10 +367,25 @@
         "print(\"\\n==== Step 3b: Decoder Output after normalization ====\\n\", decoder_output )\n"
       ],
       "metadata": {
-        "id": "cBVkb72safEN"
+        "id": "cBVkb72safEN",
+        "outputId": "c77363d4-e847-4443-902e-ecc7fa54baae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 3b: Decoder Output after normalization ====\n",
+            " [[-0.74619505  0.59631787 -1.16529437  1.31517155]\n",
+            " [ 0.05441921  0.48464347 -1.61430748  1.0752448 ]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -380,17 +441,33 @@
         "V_W = np.random.randn(A, B) # weight matrix for the linear layer\n",
         "\n",
         "###<-- add your code here\n",
-        "logits =\n",
+        "logits = np.dot(last_token_representation, V_W)\n",
         "###\n",
         "\n",
         "print(\"\\n==== Step 4: Linear Projection ====\")\n",
         "print(\"Logits:\\n\", logits)"
       ],
       "metadata": {
-        "id": "eaJ9ub_cVINt"
+        "id": "eaJ9ub_cVINt",
+        "outputId": "4db63d82-a01a-433f-f3fe-6ca1fde8b98e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 4: Linear Projection ====\n",
+            "Logits:\n",
+            " [ 2.42233624 -1.04974468  0.06239231 -2.57671149 -0.17116712 -2.6811587\n",
+            " -3.6761777  -0.35994011  1.24362728  0.5398855 ]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -428,10 +505,26 @@
         "print(\"Probabilities:\\n\", probs)"
       ],
       "metadata": {
-        "id": "D0N8t9xvVPP-"
+        "id": "D0N8t9xvVPP-",
+        "outputId": "72975976-0794-4931-c929-cc9e29e886a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 5: Softmax ====\n",
+            "Probabilities:\n",
+            " [0.57567497 0.01787606 0.05435841 0.00388256 0.04303612 0.0034975\n",
+            " 0.00129308 0.03563281 0.1771212  0.08762729]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -473,7 +566,7 @@
         "\n",
         "\n",
         "###<-- add your code here\n",
-        "greedy_idx =\n",
+        "greedy_idx = np.argmax(probs)\n",
         "###\n",
         "\n",
         "print(\"Greedy Token ID --> \", greedy_idx)\n",
@@ -483,10 +576,25 @@
         "print(\"Greedy Predicted Word --> \", greedy_word)"
       ],
       "metadata": {
-        "id": "i1sTxLwnVV_N"
+        "id": "i1sTxLwnVV_N",
+        "outputId": "8ae63577-ce24-4de2-f762-aeee81d7ea2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "==== Step 6a: Greedy Decoding ====\n",
+            "Greedy Token ID -->  0\n",
+            "Greedy Predicted Word -->  town\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -509,7 +617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "qqBs1d-NO0oc"
       },
@@ -573,7 +681,32 @@
         "print(\"Top-p Sampled Words --> \", top_p_words[0])"
       ],
       "metadata": {
-        "id": "G2wXy-dMV2Ec"
+        "id": "G2wXy-dMV2Ec",
+        "outputId": "b93c8878-759a-4a07-a79d-543bbf162aa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==== Step 6b: Top-p Sampling ====\n",
+            "Subset indexes:  [0 8]\n",
+            "Corresponding Subset probabilities:  [0.76471559 0.23528441]\n",
+            "Top-p Sampled Token IDs -->  8\n",
+            "Top-p Sampled Words -->  country\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0BStATRaplNx"
       },
       "execution_count": null,
       "outputs": []
