--- a/Hw2_Transformer_Machine_Translation.ipynb
+++ b/Hw2_Transformer_Machine_Translation.ipynb
@@ -1209,7 +1209,7 @@
         },
         "outputId": "e7ef3335-3e8c-4a85-e7fe-0388cdb70ae9"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1273,7 +1273,148 @@
             "Shubham Derhgawen Epoch 55 | Loss: 4.2403 | Time: 1.16s\n",
             "Shubham Derhgawen Epoch 56 | Loss: 4.2153 | Time: 1.11s\n",
             "Shubham Derhgawen Epoch 57 | Loss: 4.1923 | Time: 1.11s\n",
-            "Shubham Derhgawen Epoch 58 | Loss: 4.1670 | Time: 1.34s\n"
+            "Shubham Derhgawen Epoch 58 | Loss: 4.1670 | Time: 1.34s\n",
+            "Shubham Derhgawen Epoch 59 | Loss: 4.1383 | Time: 1.34s\n",
+            "Shubham Derhgawen Epoch 60 | Loss: 4.1194 | Time: 1.10s\n",
+            "Shubham Derhgawen Epoch 61 | Loss: 4.0867 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 62 | Loss: 4.0725 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 63 | Loss: 4.0494 | Time: 1.25s\n",
+            "Shubham Derhgawen Epoch 64 | Loss: 4.0196 | Time: 1.25s\n",
+            "Shubham Derhgawen Epoch 65 | Loss: 3.9986 | Time: 1.27s\n",
+            "Shubham Derhgawen Epoch 66 | Loss: 3.9742 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 67 | Loss: 3.9504 | Time: 1.28s\n",
+            "Shubham Derhgawen Epoch 68 | Loss: 3.9353 | Time: 1.38s\n",
+            "Shubham Derhgawen Epoch 69 | Loss: 3.9165 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 70 | Loss: 3.8987 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 71 | Loss: 3.8799 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 72 | Loss: 3.8601 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 73 | Loss: 3.8372 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 74 | Loss: 3.8243 | Time: 1.63s\n",
+            "Shubham Derhgawen Epoch 75 | Loss: 3.7961 | Time: 1.72s\n",
+            "Shubham Derhgawen Epoch 76 | Loss: 3.7841 | Time: 1.47s\n",
+            "Shubham Derhgawen Epoch 77 | Loss: 3.7622 | Time: 1.26s\n",
+            "Shubham Derhgawen Epoch 78 | Loss: 3.7444 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 79 | Loss: 3.7317 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 80 | Loss: 3.7089 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 81 | Loss: 3.6873 | Time: 1.23s\n",
+            "Shubham Derhgawen Epoch 82 | Loss: 3.6718 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 83 | Loss: 3.6565 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 84 | Loss: 3.6442 | Time: 1.13s\n",
+            "Shubham Derhgawen Epoch 85 | Loss: 3.6271 | Time: 1.31s\n",
+            "Shubham Derhgawen Epoch 86 | Loss: 3.6065 | Time: 1.40s\n",
+            "Shubham Derhgawen Epoch 87 | Loss: 3.5936 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 88 | Loss: 3.5773 | Time: 1.23s\n",
+            "Shubham Derhgawen Epoch 89 | Loss: 3.5565 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 90 | Loss: 3.5455 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 91 | Loss: 3.5274 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 92 | Loss: 3.5159 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 93 | Loss: 3.4947 | Time: 1.23s\n",
+            "Shubham Derhgawen Epoch 94 | Loss: 3.4774 | Time: 1.24s\n",
+            "Shubham Derhgawen Epoch 95 | Loss: 3.4662 | Time: 1.56s\n",
+            "Shubham Derhgawen Epoch 96 | Loss: 3.4486 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 97 | Loss: 3.4366 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 98 | Loss: 3.4211 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 99 | Loss: 3.4090 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 100 | Loss: 3.3843 | Time: 1.10s\n",
+            "Shubham Derhgawen Epoch 101 | Loss: 3.3764 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 102 | Loss: 3.3637 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 103 | Loss: 3.3500 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 104 | Loss: 3.3334 | Time: 1.35s\n",
+            "Shubham Derhgawen Epoch 105 | Loss: 3.3191 | Time: 1.36s\n",
+            "Shubham Derhgawen Epoch 106 | Loss: 3.3119 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 107 | Loss: 3.2918 | Time: 1.36s\n",
+            "Shubham Derhgawen Epoch 108 | Loss: 3.2860 | Time: 1.29s\n",
+            "Shubham Derhgawen Epoch 109 | Loss: 3.2645 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 110 | Loss: 3.2600 | Time: 1.13s\n",
+            "Shubham Derhgawen Epoch 111 | Loss: 3.2423 | Time: 1.25s\n",
+            "Shubham Derhgawen Epoch 112 | Loss: 3.2226 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 113 | Loss: 3.2101 | Time: 1.27s\n",
+            "Shubham Derhgawen Epoch 114 | Loss: 3.1942 | Time: 1.43s\n",
+            "Shubham Derhgawen Epoch 115 | Loss: 3.1856 | Time: 1.10s\n",
+            "Shubham Derhgawen Epoch 116 | Loss: 3.1729 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 117 | Loss: 3.1492 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 118 | Loss: 3.1402 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 119 | Loss: 3.1256 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 120 | Loss: 3.1099 | Time: 1.24s\n",
+            "Shubham Derhgawen Epoch 121 | Loss: 3.1009 | Time: 1.26s\n",
+            "Shubham Derhgawen Epoch 122 | Loss: 3.0853 | Time: 1.24s\n",
+            "Shubham Derhgawen Epoch 123 | Loss: 3.0691 | Time: 1.61s\n",
+            "Shubham Derhgawen Epoch 124 | Loss: 3.0569 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 125 | Loss: 3.0413 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 126 | Loss: 3.0345 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 127 | Loss: 3.0231 | Time: 1.13s\n",
+            "Shubham Derhgawen Epoch 128 | Loss: 3.0060 | Time: 1.33s\n",
+            "Shubham Derhgawen Epoch 129 | Loss: 2.9858 | Time: 1.39s\n",
+            "Shubham Derhgawen Epoch 130 | Loss: 2.9748 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 131 | Loss: 2.9737 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 132 | Loss: 2.9411 | Time: 1.53s\n",
+            "Shubham Derhgawen Epoch 133 | Loss: 2.9336 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 134 | Loss: 2.9260 | Time: 1.13s\n",
+            "Shubham Derhgawen Epoch 135 | Loss: 2.9135 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 136 | Loss: 2.8974 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 137 | Loss: 2.8820 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 138 | Loss: 2.8759 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 139 | Loss: 2.8616 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 140 | Loss: 2.8431 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 141 | Loss: 2.8230 | Time: 1.39s\n",
+            "Shubham Derhgawen Epoch 142 | Loss: 2.8237 | Time: 1.28s\n",
+            "Shubham Derhgawen Epoch 143 | Loss: 2.8144 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 144 | Loss: 2.8034 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 145 | Loss: 2.7822 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 146 | Loss: 2.7775 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 147 | Loss: 2.7613 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 148 | Loss: 2.7374 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 149 | Loss: 2.7327 | Time: 1.11s\n",
+            "Shubham Derhgawen Epoch 150 | Loss: 2.7118 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 151 | Loss: 2.7150 | Time: 1.59s\n",
+            "Shubham Derhgawen Epoch 152 | Loss: 2.7024 | Time: 1.26s\n",
+            "Shubham Derhgawen Epoch 153 | Loss: 2.6911 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 154 | Loss: 2.6737 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 155 | Loss: 2.6540 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 156 | Loss: 2.6383 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 157 | Loss: 2.6420 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 158 | Loss: 2.6252 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 159 | Loss: 2.6081 | Time: 1.10s\n",
+            "Shubham Derhgawen Epoch 160 | Loss: 2.5966 | Time: 1.41s\n",
+            "Shubham Derhgawen Epoch 161 | Loss: 2.5936 | Time: 1.34s\n",
+            "Shubham Derhgawen Epoch 162 | Loss: 2.5768 | Time: 1.10s\n",
+            "Shubham Derhgawen Epoch 163 | Loss: 2.5505 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 164 | Loss: 2.5507 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 165 | Loss: 2.5362 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 166 | Loss: 2.5352 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 167 | Loss: 2.5234 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 168 | Loss: 2.5062 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 169 | Loss: 2.4894 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 170 | Loss: 2.4830 | Time: 1.45s\n",
+            "Shubham Derhgawen Epoch 171 | Loss: 2.4629 | Time: 1.24s\n",
+            "Shubham Derhgawen Epoch 172 | Loss: 2.4522 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 173 | Loss: 2.4443 | Time: 1.20s\n",
+            "Shubham Derhgawen Epoch 174 | Loss: 2.4364 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 175 | Loss: 2.4273 | Time: 1.21s\n",
+            "Shubham Derhgawen Epoch 176 | Loss: 2.4027 | Time: 1.18s\n",
+            "Shubham Derhgawen Epoch 177 | Loss: 2.3939 | Time: 1.14s\n",
+            "Shubham Derhgawen Epoch 178 | Loss: 2.3827 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 179 | Loss: 2.3819 | Time: 1.44s\n",
+            "Shubham Derhgawen Epoch 180 | Loss: 2.3635 | Time: 1.19s\n",
+            "Shubham Derhgawen Epoch 181 | Loss: 2.3639 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 182 | Loss: 2.3410 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 183 | Loss: 2.3253 | Time: 1.29s\n",
+            "Shubham Derhgawen Epoch 184 | Loss: 2.3217 | Time: 1.24s\n",
+            "Shubham Derhgawen Epoch 185 | Loss: 2.3201 | Time: 1.27s\n",
+            "Shubham Derhgawen Epoch 186 | Loss: 2.2953 | Time: 1.17s\n",
+            "Shubham Derhgawen Epoch 187 | Loss: 2.3015 | Time: 1.21s\n",
+            "Shubham Derhgawen Epoch 188 | Loss: 2.2794 | Time: 1.49s\n",
+            "Shubham Derhgawen Epoch 189 | Loss: 2.2720 | Time: 1.27s\n",
+            "Shubham Derhgawen Epoch 190 | Loss: 2.2568 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 191 | Loss: 2.2465 | Time: 1.22s\n",
+            "Shubham Derhgawen Epoch 192 | Loss: 2.2450 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 193 | Loss: 2.2207 | Time: 1.15s\n",
+            "Shubham Derhgawen Epoch 194 | Loss: 2.2163 | Time: 1.13s\n",
+            "Shubham Derhgawen Epoch 195 | Loss: 2.2085 | Time: 1.16s\n",
+            "Shubham Derhgawen Epoch 196 | Loss: 2.1979 | Time: 1.12s\n",
+            "Shubham Derhgawen Epoch 197 | Loss: 2.1946 | Time: 1.25s\n",
+            "Shubham Derhgawen Epoch 198 | Loss: 2.1786 | Time: 1.38s\n",
+            "Shubham Derhgawen Epoch 199 | Loss: 2.1618 | Time: 1.11s\n"
           ]
         }
       ]
@@ -1320,10 +1461,61 @@
         "    print('*******'*50)"
       ],
       "metadata": {
-        "id": "4eXzi_Kaa0Uf"
+        "id": "4eXzi_Kaa0Uf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8975f608-565d-4a2f-8cf8-546d5599417e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Source: A group of men are loading cotton onto a truck\n",
+            "Reference: Eine Gruppe von Männern lädt Baumwolle auf einen Lastwagen\n",
+            "Predicted: <bos> eine gruppe von einer von einer wiese . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A man sleeping in a green room on a couch.\n",
+            "Reference: Ein Mann schläft in einem grünen Raum auf einem Sofa.\n",
+            "Predicted: <bos> ein mann in einem roten hemd und einer roten hemd trägt , der nähe . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A boy wearing headphones sits on a woman's shoulders.\n",
+            "Reference: Ein Junge mit Kopfhörern sitzt auf den Schultern einer Frau.\n",
+            "Predicted: <bos> ein junge sitzt auf einem großen felsen . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: Two men setting up a blue ice fishing hut on an iced over lake\n",
+            "Reference: Zwei Männer bauen eine blaue Eisfischerhütte auf einem zugefrorenen See auf\n",
+            "Predicted: <bos> zwei männer mit einem roten hosen , die in der nähe eines strands mit einem geländer auf einem schönen gehöfts einen tisch . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A balding man wearing a red life jacket is sitting in a small boat.\n",
+            "Reference: Ein Mann mit beginnender Glatze, der eine rote Rettungsweste trägt, sitzt in einem kleinen Boot.\n",
+            "Predicted: <bos> ein mann in einem roten hemd und einer roten hemd trägt , der nähe eines tisch . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A lady in a red coat, holding a bluish hand bag likely of asian descent, jumping off the ground for a snapshot.\n",
+            "Reference: Eine Frau in einem rotem Mantel, die eine vermutlich aus Asien stammende Handtasche in einem blauen Farbton hält, springt für einen Schnappschuss in die Luft.\n",
+            "Predicted: <bos> eine frau in einem roten hemd und eine frau , die auf einem kleinen mädchen , die kamera . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A brown dog is running after the black dog.\n",
+            "Reference: Ein brauner Hund rennt dem schwarzen Hund hinterher.\n",
+            "Predicted: <bos> ein hund rennt im freien . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A young boy wearing a Giants jersey swings a baseball bat at an incoming pitch.\n",
+            "Reference: Ein kleiner Junge mit einem Giants-Trikot schwingt einen Baseballschläger in Richtung eines ankommenden Balls.\n",
+            "Predicted: <bos> ein junge sitzt auf einem weißen hemd sitzt auf einem grünen bahn . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A man in a cluttered office is using the telephone\n",
+            "Reference: Ein Mann telefoniert in einem unaufgeräumten Büro\n",
+            "Predicted: <bos> ein mann in einem roten hemd trägt , der nähe . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n",
+            "Source: A smiling woman in a peach tank top stands holding a mountain bike\n",
+            "Reference: Eine lächelnde Frau mit einem pfirsichfarbenen Trägershirt hält ein Mountainbike\n",
+            "Predicted: <bos> eine frau in einem roten hemd und einer wiese . <eos>\n",
+            "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************\n"
+          ]
+        }
+      ]
     }
   ]
 }
